--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
+/* General */
+
+.bold{
+    font-weight:bold;
+}
+
+.linebreak{
+    width:20px;
+    height:5px;
+    background-color: #546e41;
+    display:block;
+    margin:20px auto;
+}
 
 /* Colors */
 
@@ -18,16 +33,24 @@
 
 .link{
     color: #fafafa;
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 300;
     text-align: center;
+    margin:0 auto;
 }
 
 .link:hover{
     color: #8aab7e;
 }
 
+.navigation{
+    width:100%;
+    display: flex;
+    justify-content: center;
+}
 
 .nav-social{
-    padding: .5rem 1rem;
+    padding:15px;
     margin: 0 auto;
     text-align:center;
 }
@@ -35,29 +58,23 @@
 .nav-social li{
     list-style-type: none;
     display: inline-block;
-    width:30px;
-    height: 30px;
+    width: 35px;
+    height: 35px;
     border-radius: 50%;
     background-color: #fafafa;
 }
 
-.nav-social li i{
-    width:30px;
-    height: 30px;
+.nav-social li i {
+    width:35px;
+    height: 35px;
     border-radius: 50%;
     color: #756342;
     font-size: 18px;
     text-align: center;
-    line-height: 30px;
-    
-    
-}
+    line-height: 35px;
+    }
 
-.bold{
-    font-weight:bold;
-}
-
-.nav-social li i:hover{
+.nav-social li i:hover {
     color: #8aab7e;
     border-color: #8aab7e;
     transition: all 0.35s ease-out;
@@ -91,4 +108,160 @@
     color:#fafafa;
     font-size: 30px;
 
+}
+
+/* Hero Section */
+
+.hero-image-home{
+    height:100vh;
+    background: url(../images/van.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+}
+
+.hero-section{
+    position:relative;
+}
+
+.hero-text{
+    width:70%;
+    position: absolute;
+    left:50%;
+    top:5%;
+    margin-left: -35%;
+
+}
+
+
+.hero-text h1{
+    color: #546e41;
+    font-family: "Ubuntu", sans-serif;
+    font-weight:600;
+    font-size:20px;
+    text-align: center;
+    margin:10px;
+}
+
+.hero-text h3{
+    color: #fafafa;
+    font-family: "Ubuntu", sans-serif;
+    font-weight:300;
+    font-size:16px;
+    text-align: center;
+    margin:10px;
+
+}
+
+
+/* Media Queries */
+
+@media (min-width: 768px){
+
+    /* Navigation */
+
+    .navigation{
+        width:90%;
+    }
+
+    .link{
+        font-size: 14px;
+    }
+
+    /* Hero Image Text */
+
+    .hero-text{
+        top:10%;
+    }
+
+
+@media (min-width: 1024px){
+
+    /* Navigation */
+
+    .navigation{
+        width:78%;
+    }
+
+    .nav-social{
+        margin-left:75px;
+    }
+
+    .link{
+        margin-left: 30px;
+        font-size: 16px;
+    }
+
+    .logo{
+        margin:10px;
+    }
+
+    /* Hero Image Text */
+
+
+    .hero-text h1{
+        font-size: 25px;
+    }
+
+    .hero-text h3{
+        font-size:18px;
+    }
+
+}
+
+@media (min-width: 1440px){
+
+    /* Navigation */
+
+    .navigation{
+        width:82%;
+    }
+
+
+    .logo{
+        width: 175px;
+        height: 175px;
+    }
+}
+
+@media (min-width: 2560px){
+
+    /* Navigation */
+
+    .navigation{
+        width:88%;
+    }
+
+    .link{
+        font-size: 25px;
+    }
+
+    .logo{
+        width: 250px;
+        height: 250px;
+    }
+
+    .nav-social li{
+        width: 60px;
+        height: 60px;
+    
+    }
+
+    .nav-social li i {
+    width: 60px;
+    height: 60px;
+    font-size: 25px;
+    line-height: 60px;
+    }
+
+    /* Hero Image Text */
+
+    .hero-text h1{
+        font-size: 35px;
+    }
+
+    .hero-text h3{
+        font-size:25px;
+    }
 }
