--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,12 @@
     margin:20px auto;
 }
 
+.bodylink{
+    color:#546e41;
+    font-weight: 500;
+    text-decoration: none;
+}
+
 /* Colors */
 
 .bg-nav{
