--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,35 @@
     
 }
 
+.bg-social-icon{
+    list-style-type: none;
+    display: inline-block;
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    background-color: #fafafa;
+}
+
+.social-icon{
+    width:35px;
+    height: 35px;
+    border-radius: 50%;
+    color: #205975;
+    font-size: 18px;
+    text-align: center;
+    line-height: 35px;
+}
+
+
+.social-icon:hover {
+    color: #8aab7e;
+    border-color: #8aab7e;
+    transition: all 0.35s ease-out;
+    -moz-transition: all 0.35s ease-out;
+    -webkit-transition: all 0.35s ease-out;
+    -o-transition: all 0.35s ease-out;
+}
+
 /* Colors */
 
 .bg-nav{
@@ -67,34 +96,6 @@
     padding:15px;
     margin: 0 auto;
     text-align:center;
-}
-
-.nav-social li{
-    list-style-type: none;
-    display: inline-block;
-    width: 35px;
-    height: 35px;
-    border-radius: 50%;
-    background-color: #fafafa;
-}
-
-.nav-social li i {
-    width:35px;
-    height: 35px;
-    border-radius: 50%;
-    color: #205975;
-    font-size: 18px;
-    text-align: center;
-    line-height: 35px;
-    }
-
-.nav-social li i:hover {
-    color: #8aab7e;
-    border-color: #8aab7e;
-    transition: all 0.35s ease-out;
-    -moz-transition: all 0.35s ease-out;
-    -webkit-transition: all 0.35s ease-out;
-    -o-transition: all 0.35s ease-out;
 }
 
 .toggle-nav{
@@ -224,6 +225,26 @@
     font-family: "Ubuntu", sans-serif;
     color: #484848;
 }
+
+/* Footer */
+
+.footer-section{
+    background-color: #205975;
+    padding-top:50px;
+    padding-bottom: 50px;
+}
+
+.social-footer{
+    padding-top: 20px;
+    padding-left:0;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.footer-nav{
+    padding-bottom:20px;
+}
+
 
 /* Media Queries */
 
