--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,11 @@
     
 }
 
+.btn-general:hover{
+    background-color: #205975;
+    color: #fafafa;
+}
+
 .bg-social-icon{
     list-style-type: none;
     display: inline-block;
@@ -205,8 +210,7 @@
 }
 
 .card-section{
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding:2rem;
 }
 
 .card{
