--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
-/* General */
+/* Typography */
 
 .h1{
     color: #8aab7e;
@@ -24,18 +24,20 @@
     font-weight:bold;
 }
 
+.bodylink{
+    color:#8aab7e;
+    font-weight: 500;
+    text-decoration: none;
+}
+
+/* Buttons + Linebreaks */
+
 .linebreak{
     width:20px;
     height:5px;
     background-color: #8aab7e;
     display:block;
     margin:20px auto;
-}
-
-.bodylink{
-    color:#8aab7e;
-    font-weight: 500;
-    text-decoration: none;
 }
 
 .btn-general{
@@ -50,6 +52,8 @@
     background-color: #205975;
     color: #fafafa;
 }
+
+/* Social Icons */
 
 .bg-social-icon{
     list-style-type: none;
@@ -245,6 +249,7 @@
     border-radius: 0;
 }
 
+
 /* Footer */
 
 .footer-section{
@@ -262,6 +267,43 @@
 
 .footer-nav{
     padding-bottom:20px;
+}
+
+/* ------------------------------------------------------   Our Story Page Elements */
+
+/* Banner Image */
+
+.banner-image-our-story{
+    height: 30vh;
+    background: url(../images/ourstory-banner.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+
+}
+
+/* Our Story Profile Image & Bio */
+
+.os-bioimage{
+    height:200px;
+    width:200px;
+    border-radius: 50%;
+    background: url(../images/os-bioimage.jpg);
+    background-size: cover;
+    background-position: center;
+    margin: 50px auto;
+}
+
+.ourstory-bio{
+    font-family: "Ubuntu", sans-serif;
+    font-weight:400;
+    font-size: 16px;
+    text-align: center;
+    color: #484848;
+    padding-left: 25px;
+    padding-right:25px;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 
@@ -333,7 +375,7 @@
 
     }
 
-    .biotext{
+    .bio-text{
         width:95%;
     }
 
@@ -342,6 +384,12 @@
     .article-container{
         margin-left:5%;
         margin-right:5%;
+    }
+
+    /*------------------------------------------- Our Story Page */
+
+    .ourstory-bio{
+        width: 80%;
     }
 
 }
