--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
     font-family: "Ubuntu", sans-serif;
     font-weight:600;
     text-transform: uppercase;
-    font-size: 2.5rem;
+    font-size: 1.5rem;
     text-align: center;
     padding:15px;
     margin:0;
@@ -246,9 +246,16 @@
 }
 
 .card-header{
+    font-size:1.25rem;
     text-align: center;
     font-family: "Ubuntu", sans-serif;
-    color: #484848;
+    color: #fafafa;
+    background-color: #8aab7e;
+}
+
+.card-title{
+    font-size: 1.5rem;
+    padding:20px;
 }
 
 .card-img-top{
@@ -334,14 +341,16 @@
     
 }
 
-.banner-heading{
-   
-}
-
 .form{
     margin-top: 50px;
     margin-bottom: 50px;
     width:80%;
+}
+
+.form-label{
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 400;
+    color: #484848;
 }
 
 
@@ -353,10 +362,6 @@
 
     .navigation{
         width:90%;
-    }
-
-    .link{
-        font-size: 14px;
     }
 
     /* Hero Image Text */
@@ -395,20 +400,12 @@
 
     .link{
         margin-left: 30px;
-        font-size: 16px;
+
     }
 
     .logo{
         margin:10px;
     }
-
-    /* Hero Image Text */
-
-
-    .h1{
-        font-size: 2.2rem;
-    }
-    
 
     /* Profile Image & Bio */
 
@@ -458,18 +455,26 @@
         height:250px;
         width:250px;
     }
+    
+ /* ------------------------------------------------------   Our Story Page Elements */
 
-    .biotext{
-        font-size:18px;
-
+    .os-bioimage{
+        height:250px;
+        width:250px;
     }
-    
- 
-
-    
 }
 
 @media (min-width: 2560px){
+
+    /* General */
+
+    p{
+        font-size:1.5rem;
+    }
+
+    .btn-general{
+        font-size: 1.5rem;
+    }
 
     /* Navigation */
 
@@ -478,7 +483,7 @@
     }
 
     .link{
-        font-size: 25px;
+        font-size: 1.5rem;
     }
 
     .logo{
@@ -517,10 +522,6 @@
         width:350px;
     }
 
-    .biotext{
-        font-size:22px;
-    }
-
     /* Featured & Recent Articles */
 
     .article-container{
@@ -528,6 +529,24 @@
         margin-right:10%;
     }
 
-    
-    
+    .card-title{
+        font-size: 2rem;
+    }
+
+    .card-header{
+        font-size: 1.8rem;
+    }
+
+    /* ------------------------------------------------------   Our Story Page Elements */
+
+    .os-bioimage{
+        height:350px;
+        width:350px;
+    }
+
+    /* ------------------------------------------------------   Contact Page Elements */
+
+    .form-label{
+        font-size: 1.5rem;
+    }
 }
