--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
+
 /* Typography */
 
 .h1{
@@ -317,6 +318,25 @@
     padding-right:25px;
     margin-top: 50px;
     margin-bottom: 50px;
+}
+
+/* Sticky Footer for Contact + Our Story - 2560px + (Sourced: https://css-tricks.com/couple-takes-sticky-footer/) */
+
+html, body{
+    height: 100%;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+.content-wrapper {
+  flex: 1 0 auto;
+}
+
+.footer-section {
+  flex-shrink: 0;
 }
 
 /* ------------------------------------------------------   Contact Page Elements */
