--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,8 +246,8 @@
 /* Featured & Recent Articles */
 
 .article-container{
-    padding-top: 75px;
-    padding-bottom:75px;
+    padding-top: 50px;
+    padding-bottom:50px;
 }
 
 .card-section{
@@ -473,6 +473,9 @@ body {
 
     /* Profile Image & Bio */
 
+    .biosection{
+        width: 80%;
+    }
     .bio-text-section{
         display: flex;
         justify-content: center;
@@ -480,16 +483,11 @@ body {
 
     }
 
-    .bio-text{
-        width:95%;
-    }
-
 
     /* Featured & Recent Articles */
 
     .article-container{
-        margin-left:5%;
-        margin-right:5%;
+        width: 90%;
     }
 
     /*------------------------------------------- Our Story Page */
@@ -540,8 +538,7 @@ body {
     /* Featured & Recent Articles */
 
     .article-container{
-        margin-left:10%;
-        margin-right:10%;
+        width: 80%;
     }
     
     /* ------------------------------------------------------   Our Story Page Elements */
