--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,12 @@
     color: #fafafa;
 }
 
+.btn-subscribe{
+    margin: 20px auto;
+    display: flex;
+
+}
+
 /* Social Icons */
 
 .bg-social-icon{
@@ -294,8 +300,8 @@
 /* Email Sub */
 
 .emailsub-container{
-    margin-top:50px;
-    margin-bottom: 50px;
+    margin-top:75px;
+    margin-bottom: 75px;
     width: 90%;
 }
 
@@ -306,11 +312,6 @@
     text-align: center;
     margin-bottom: 25px;
 }
-
-.emailsub-input{
-    margin-bottom: 25px;
-}
-
 
 /* Footer */
 
@@ -483,14 +484,6 @@ body {
         font-size: 375%;
     }
 
-    /* Email Sub */
-
-    .emailsub-container{
-        width: 70%;
-    }
-
-    
-
     /* ------------------------------------------------------   Contact Page Elements */
 
     .form{
@@ -631,12 +624,6 @@ body {
 
     .article-container{
         width: 80%;
-    }
-
-    /* Email Sub */
-
-    .emailsub-container{
-        width: 50%;
     }
     
     /* ------------------------------------------------------   Our Story Page Elements */
