--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -247,8 +247,7 @@
 /* Profile Image & Bio */
 
 .biosection{
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin: 5% auto;
     
 }
 
@@ -485,7 +484,7 @@ body {
 .bp-container{
     display: flex;
     justify-content: center;
-    margin: 10% auto;
+    margin: 5% auto;
     
 }
 
@@ -525,10 +524,51 @@ body {
     width: 70%;
 }
 
+/* Breadcrumb Nav */
+
+.breadcrumb-container{
+    margin-top: 1rem;
+    display: flex;
+    justify-content: center;
+}
+
+.breadcrumb-link{
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 300;
+    color: #484848;
+    text-decoration: none;
+    font-size: .75rem;
+}
+
+.breadcrumb-link:hover{
+    color: #8aab7e;
+}
+
+.breadcrumb-live{
+    color: #8aab7e;
+}
+
+.breadcrumb-item+.breadcrumb-item::before{
+    float: left;
+    padding-right: .5rem;
+    color: #484848;
+    content: var(--bs-breadcrumb-divider, "/");
+    font-weight: 300;
+}
+
+.breadcrumb-item+.active::before{
+    float: left;
+    padding-right: .5rem;
+    color: #484848;
+    content: var(--bs-breadcrumb-divider, "/");
+    font-weight: 300;
+}
+
+
 /* ------------------------------------------------------   Blog Page */
 
 .list-snippet-container{
-    margin: 10% auto;
+    margin: 5% auto;
     width: 90%;
 }
 
