--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
+/* Contained Body Width + Full Width Header & Footer @ 2500 px + */
+
+.max-body{
+    max-width: 2500px;
+    margin: 0 auto;
+}
+
+.max-nav{
+    max-width: 2500px;
+    margin: 0 auto;
+}
+
 /* Typography */
 
 .h1{
@@ -966,12 +978,12 @@ body {
 
     /* ------------------------------------------------------   Blog Page */
 
-    .snippet-container{
-    width: 100%;
+    .list-snippet-container{
+        width: 100%;
     }
 
     .snippet-card-body{
-    font-size:1.5rem;
+        font-size:1.5rem;
     }
 
     .snippet-card-text{
@@ -979,7 +991,7 @@ body {
     }
 
     .snippet-card-title{
-    font-size: 2.5rem;
+        font-size: 2.5rem;
     }
 
     .btn-snippet{
